Got simple JS working - functionality is needed

--- a/css/root.css
+++ b/css/root.css
@@ -1,13 +1,8 @@
 :root {
-    --color-border-wrong: #FF5959;
-    --color-text-primary: #151515;
-    --color-button-default: #854DFF;
-    --color-button-hover: #151515;
-    --color-background-body: hsl(0, 1%, 44%);
-    --color-background-card: hsl(0, 0%, 94%)
-
-}
-
-* {
-    font-family: "Poppins";
+  --color-border-wrong: #ff5959;
+  --color-text-primary: #151515;
+  --color-button-default: #854dff;
+  --color-button-hover: #151515;
+  --color-background-body: hsl(0, 1%, 44%);
+  --color-background-card: hsl(0, 0%, 94%);
 }
