Added outputs plus functions to CurrentDate - BirthDate

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ body {
   height: 15%;
   width: 100%;
   gap: 20px;
-  padding-bottom: 30px;
+  padding-bottom: 50px;
   border-bottom: 2px solid var(--color-background-card);
 }
 
@@ -49,7 +49,7 @@ body {
   padding: 10px;
   font-weight: 700;
   font-size: 32px;
-  border: 2px solid gray;
+  border: 2px solid grey;
 }
 
 .date-entry-wrapper > label {
@@ -64,18 +64,21 @@ input::-webkit-inner-spin-button {
 }
 
 .day-error {
+  display: none;
   position: relative;
   left: -750px;
   top: 110px;
   max-width: 0;
   max-height: 0;
   white-space: nowrap;
+  font-size: 25px;
+  color: red;
 }
 
 .button-1-container {
   position: relative;
-  right: -120px;
-  top: 70px;
+  right: -110px;
+  top: 85px;
 }
 
 .button-1:hover {
@@ -91,4 +94,33 @@ input::-webkit-inner-spin-button {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/*---------------------- OUTPUT ----------------------*/
+.output-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  height: 80%;
+  padding-top: 30px;
+}
+
+.output-row-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.output-row-wrapper > p {
+  font-size: 150px;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.output-row-wrapper > p:first-child {
+  color: var(--color-button-default);
+  font-weight: 800;
 }
